# Django_2

./: catalog_fixture.json  groups.json  pyproject.toml
Product/: urls.py
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blogs/templates/blogs/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py
catalog/templates/: base.html  contacts.html  home.html  product_details.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_list_by_category.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
