[tool.poetry]
name = "django-2"
version = "0.1.0"
description = ""
authors = ["marinabrovko <marishka.brovko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
black = "^24.10.0"
ipython = "^8.29.0"
psycopg-binary = "^3.2.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
